--- a/.babelrc
+++ b/.babelrc
@@ -1,22 +1,31 @@
 {
-  "presets": [
-    "es2015"
-  ],
-  "env": {
-    "test": {
-      "plugins": [
-        "istanbul"
-      ]
-    },
-    "production": {
-      "presets": [
-        [
-          "es2015",
-          {
-            "modules": false
-          }
-        ]
-      ]
-    }
-  }
+	"presets": [
+		"es2015"
+	],
+	"env": {
+		"test": {
+			"plugins": [
+				"istanbul"
+			]
+		},
+		"production": {
+			"presets": [
+				[
+					"es2015",
+					{
+						"modules": false
+					}
+				]
+			]
+		},
+		"plugins": [
+			[
+				"babel-plugin-root-import",
+				{
+					"rootPathPrefix": "@",
+					"rootPathSuffix": "src"
+				}
+			]
+		]
+	}
 }
