--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "bootstrap": "^4.1.1",
     "bootstrap-select": "^1.13.1",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "gulp-cli": "^2.0.1",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.3",
     "vue": "^2.1.10",
