--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
     "bootstrap": "^4.1.1",
     "bootstrap-select": "^1.13.1",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "chartist-plugin-legend": "^0.6.2",
     "gulp-cli": "^2.0.1",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.3",
     "vue": "^2.1.10",
     "vue-asset-loader": "^0.1.3",
+    "vue-chartist": "^2.1.2",
     "vue-extend-layout": "^1.1.3",
     "vue-router": "^2.2.1",
     "vue-svg-loader": "^0.5.0",
