--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "bootstrap-vue": "^2.0.0-rc.11",
     "chart.js": "^2.7.2",
     "chartist-plugin-legend": "^0.6.2",
+    "fullcalendar": "^3.9.0",
     "gulp-cli": "^2.0.1",
+    "highcharts": "^6.1.1",
+    "highcharts-vue": "^1.0.4",
     "jquery": "^3.3.1",
     "moment": "^2.22.2",
     "popper.js": "^1.14.3",
@@ -16,6 +19,7 @@
     "vue-chartist": "^2.1.2",
     "vue-chartjs": "^3.3.2",
     "vue-extend-layout": "^1.1.3",
+    "vue-full-calendar": "^2.6.1",
     "vue-router": "^2.2.1",
     "vue-svg-loader": "^0.5.0",
     "vuex": "^3.0.1"
@@ -30,7 +34,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
-    "babel-runtime": "^6.23.0",
+    "babel-runtime": "^6.26.0",
     "browser-sync": "^2.18.8",
     "browser-sync-spa": "^1.0.3",
     "css-loader": "^0.26.1",
