--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue-full-calendar": "^2.6.1",
     "vue-router": "^2.2.1",
     "vue-svg-loader": "^0.5.0",
+    "vue2-google-maps": "^0.10.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
