--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "bootstrap-vue": "^2.0.0-rc.11",
     "chart.js": "^2.7.2",
     "chartist-plugin-legend": "^0.6.2",
+    "dayspan-vuetify": "^0.2.3",
     "fullcalendar": "^3.9.0",
     "gulp-cli": "^2.0.1",
     "highcharts": "^6.1.1",
     "highcharts-vue": "^1.0.4",
     "jquery": "^3.3.1",
+    "mdi": "^2.2.43",
     "moment": "^2.22.2",
     "popper.js": "^1.14.3",
     "vue": "^2.1.10",
