--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue-full-calendar": "^2.6.1",
     "vue-router": "^2.2.1",
     "vue-svg-loader": "^0.5.0",
+    "vue-weather-widget": "^2.1.3",
     "vue2-google-maps": "^0.10.1",
     "vuex": "^3.0.1"
   },
