--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "popper.js": "^1.14.3",
     "vue": "^2.1.10",
     "vue-asset-loader": "^0.1.3",
+    "vue-canvas-gauges": "0.0.0",
     "vue-chartist": "^2.1.2",
     "vue-chartjs": "^3.3.2",
     "vue-extend-layout": "^1.1.3",
@@ -26,7 +27,8 @@
     "vue-svg-loader": "^0.5.0",
     "vue-weather-widget": "^2.1.3",
     "vue2-google-maps": "^0.10.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "zingchart": "^2.8.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.3",
