--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vue-router": "^2.2.1",
     "vue-svg-loader": "^0.5.0",
     "vue-weather-widget": "^2.1.3",
+    "vue2-canvas-gauges": "0.0.0",
     "vue2-google-maps": "^0.10.1",
     "vuex": "^3.0.1",
     "zingchart": "^2.8.0"
