--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dayspan-vuetify": "^0.2.3",
     "fullcalendar": "^3.9.0",
     "gulp-cli": "^2.0.1",
-    "highcharts": "^6.1.1",
+    "highcharts": "^6.1.3",
+    "highcharts-more": "^0.1.7",
     "highcharts-vue": "^1.0.4",
     "jquery": "^3.3.1",
     "mdi": "^2.2.43",
@@ -28,6 +29,7 @@
     "vue-weather-widget": "^2.1.3",
     "vue2-canvas-gauges": "0.0.0",
     "vue2-google-maps": "^0.10.1",
+    "vue2-highcharts": "^1.2.5",
     "vuex": "^3.0.1",
     "zingchart": "^2.8.0"
   },
