--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "vue-chartjs": "^3.3.2",
     "vue-extend-layout": "^1.1.3",
     "vue-full-calendar": "^2.6.1",
+    "vue-notification": "^1.3.13",
     "vue-router": "^2.2.1",
     "vue-svg-loader": "^0.5.0",
     "vue-weather-widget": "^2.1.3",
     "vue2-canvas-gauges": "0.0.0",
     "vue2-google-maps": "^0.10.1",
     "vue2-highcharts": "^1.2.5",
+    "vue2-loading": "0.0.16",
     "vuex": "^3.0.1",
     "zingchart": "^2.8.0"
   },
