webpack dist config modifications

--- a/.babelrc
+++ b/.babelrc
@@ -15,7 +15,13 @@
 					{
 						"modules": false
 					}
-				]
+				],
+				["env", {
+					"targets": {
+					  "node": "current",
+					  "uglify": true
+					}
+				}]
 			]
 		},
 		"plugins": [
