--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "chart.js": "^2.7.2",
     "chartist-plugin-legend": "^0.6.2",
     "dayspan-vuetify": "^0.2.3",
+    "file-loader": "^2.0.0",
     "fullcalendar": "^3.9.0",
     "gulp-cli": "^2.0.1",
     "highcharts": "^6.1.3",
     "highcharts-more": "^0.1.7",
     "highcharts-vue": "^1.0.4",
     "jquery": "^3.3.1",
-    "mdi": "^2.2.43",
     "moment": "^2.22.2",
     "popper.js": "^1.14.3",
     "vue": "^2.1.10",
@@ -22,8 +22,6 @@
     "vue-canvas-gauges": "0.0.0",
     "vue-chartist": "^2.1.2",
     "vue-chartjs": "^3.3.2",
-    "vue-extend-layout": "^1.1.3",
-    "vue-full-calendar": "^2.6.1",
     "vue-notification": "^1.3.13",
     "vue-router": "^2.2.1",
     "vue-svg-loader": "^0.5.0",
@@ -39,12 +37,13 @@
     "autoprefixer": "^6.7.3",
     "babel-core": "^6.23.1",
     "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.3.2",
+    "babel-loader": "^6.4.1",
     "babel-plugin-istanbul": "^4.0.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-runtime": "^6.26.0",
     "browser-sync": "^2.18.8",
     "browser-sync-spa": "^1.0.3",
@@ -77,6 +76,7 @@
     "postcss-loader": "^1.3.1",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.13.1",
+    "uglifyjs-webpack-plugin": "^2.0.1",
     "vue-loader": "^11.1.0",
     "vue-template-compiler": "^2.1.10",
     "webpack": "^2.7.0",
