--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "babel-plugin-root-import": "^6.1.0",
+    "big-js": "^3.1.3",
     "bootstrap": "^4.1.1",
     "bootstrap-select": "^1.13.1",
     "bootstrap-vue": "^2.0.0-rc.11",
@@ -18,13 +19,12 @@
     "moment": "^2.22.2",
     "popper.js": "^1.14.3",
     "vue": "^2.1.10",
-    "vue-asset-loader": "^0.1.3",
+    "vue-asset-loader": "^0.1.5",
     "vue-canvas-gauges": "0.0.0",
     "vue-chartist": "^2.1.2",
     "vue-chartjs": "^3.3.2",
     "vue-notification": "^1.3.13",
     "vue-router": "^2.2.1",
-    "vue-svg-loader": "^0.5.0",
     "vue-weather-widget": "^2.1.3",
     "vue2-canvas-gauges": "0.0.0",
     "vue2-google-maps": "^0.10.1",
