--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "highcharts-vue": "^1.0.4",
     "jquery": "^3.3.1",
     "moment": "^2.22.2",
+    "pc-bootstrap4-datetimepicker": "^4.17.50",
     "popper.js": "^1.14.3",
     "vue": "^2.1.10",
     "vue-asset-loader": "^0.1.5",
