--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "bootstrap-vue": "^2.0.0-rc.11",
     "chart.js": "^2.7.2",
     "chartist-plugin-legend": "^0.6.2",
+    "console": "^0.7.2",
     "dayspan-vuetify": "^0.2.3",
+    "fancy-log": "^1.3.3",
     "file-loader": "^2.0.0",
     "fullcalendar": "^3.9.0",
     "gulp-cli": "^2.0.1",
