--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "vue-canvas-gauges": "0.0.0",
     "vue-chartist": "^2.1.2",
     "vue-chartjs": "^3.3.2",
+    "vue-gtm": "^2.3.1",
     "vue-notification": "^1.3.13",
     "vue-router": "^2.2.1",
     "vue-weather-widget": "^2.1.3",
